crates/mcpkit-macros/tests/compile-fail/resource_missing_uri.stderr
error: Missing field `uri_pattern`
  --> tests/compile-fail/resource_missing_uri.rs:10:6
   |
10 |     #[resource(name = "Config")]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
